# IDA_GIT

./: .gitignore  CLAUDE.md  README.md  build_log.txt  duba_baslangic_kod.py  duba_baslangic_kod.txt  gazebo_yolo_simulation.py  main.txt  test.txt
claude_memory/: MEMORY.md  fm9-telem2-cozuldu.md  grafik-formati-ekran2.md
eyup_memory/: MEMORY.md  README.md  bekleyen-girdiler-isaret.md  donanim-test-plani.md  gazebo-simulasyon-erteleme.md  girdap-decision-entegrasyon.md  girdap-ida-algi-github-upload.md  girdap-ida-birlesik-repo.md  girdap-ida-proje-durumu.md  haberlesme-frekans-uyum.md  hata-defteri-kurali.md  ida-git-gomulu-revizyon.md  jetson-sifirlama-2026-07-13.md  jetson-surum-pinleri.md  jetson-yuk-kod-sadeligi.md  memory-repo-yedek.md  sartname-ida-2026.md  sartname-once-kural.md  sik-memory-checkpoint.md  tekne-cift-motor.md  test-dogrulama-ilkesi.md  video-auto-donusu.md  video-repo-tek-kaynak.md  yeni-arkadas-repo-plani.md  yolo-model-durumu.md
ida_topics_yeni/: setup.cfg  sistem_baslat.sh
jetsonVideoKod_eski/: README.md  kontrol-listesi.md  pc-render-yonergesi.md  qgc-video-ayarlari.html
jetsonvideokod_geneltest1_log/ros2_ws/src/girdap_decision/: package.xml  setup.py
jetsonvideokod_geneltest1_log/ros2_ws/src/girdap_decision/config/: hardware.yaml
jetsonvideokod_geneltest1_log/ros2_ws/src/girdap_decision/girdap_decision/: fusion_node.py  local_map_node.py  mission_manager_node.py  perception_fusion_node.py  perception_lidar_node.py  telemetry_node.py
jetsonvideokod_geneltest1_log/ros2_ws/src/girdap_decision/launch/: fusion_test.launch.py  gazebo_bridge.launch.py  hardware.launch.py
src/girdap_yenimodel/: CMakeLists.txt  package.xml
src/girdap_yenimodel/launch/: display.launch  gazebo.launch  gazebo.launch.py
src/girdap_yenimodel/meshes/: base_link.STL  buton_link.STL  gps_link.STL  kamera_link.STL  lidar_link.STL  lthruster_link.STL
src/girdap_yenimodel/urdf/: Girdap.csv  Girdap.urdf
src/ida_topics_yeni/: config_ekf.yaml  package.xml  sistem_baslat.sh
src/ida_topics_yeni/ida_topics/: control_node.py  decision_node.py  gps_imu_driver_node.py  kamera_kayit_node.py  livox_driver_node.py  oakd_driver_node.py  perception_node.py  sensor_node.py
(+1596 files in other folders)
