<?xml version="1.0"?>
<package format="3">
  <name>Girdap</name>
  <version>0.0.1</version>
  <description>Girdap IDA model package</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
