<?xml version="1.0"?>
<package format="3">
  <name>ida_topics</name>
  <version>0.0.1</version>
  <description>IDA sistem topic node'ları</description>
  <maintainer email="ida@example.com">IDA Takımı</maintainer>
  <license>Apache 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
