<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>girdap_decision</name>
  <version>0.1.0</version>
  <description>
    Girdap İDA — karar/planlama paketi: iSAM2 sensör füzyonu, RRT* global
    planlayıcı, MPPI lokal planlayıcı, görev FSM ve telemetri logger'ı.
    TEKNOFEST 2026 İnsansız Deniz Aracı yarışması.
  </description>
  <maintainer email="unszside@gmail.com">Girdap Takımı</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
